--- a/SuperStoreDS.ipynb
+++ b/SuperStoreDS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f4a228ad",
    "metadata": {},
    "outputs": [],
@@ -14,6 +14,7 @@
     "# !pip install matplotlib\n",
     "# !pip install seaborn\n",
     "# !pip install plotly_express \n",
+    "# !pip install ipywidgets\n",
     "#%pip install pandas\n",
     "#%matplotlib inline\n",
     "\n",
@@ -67,28 +68,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "77066058",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 9994 entries, 0 to 9993\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   Row ID         9994 non-null   int64  \n",
+      " 1   Order ID       9994 non-null   object \n",
+      " 2   Order Date     9994 non-null   object \n",
+      " 3   Ship Date      9994 non-null   object \n",
+      " 4   Ship Mode      9994 non-null   object \n",
+      " 5   Customer ID    9994 non-null   object \n",
+      " 6   Customer Name  9994 non-null   object \n",
+      " 7   Segment        9994 non-null   object \n",
+      " 8   Country        9994 non-null   object \n",
+      " 9   City           9994 non-null   object \n",
+      " 10  State          9994 non-null   object \n",
+      " 11  Postal Code    9994 non-null   int64  \n",
+      " 12  Region         9994 non-null   object \n",
+      " 13  Product ID     9994 non-null   object \n",
+      " 14  Category       9994 non-null   object \n",
+      " 15  Sub-Category   9994 non-null   object \n",
+      " 16  Product Name   9994 non-null   object \n",
+      " 17  Sales          9994 non-null   float64\n",
+      " 18  Quantity       9994 non-null   int64  \n",
+      " 19  Discount       9994 non-null   float64\n",
+      " 20  Profit         9994 non-null   float64\n",
+      "dtypes: float64(3), int64(3), object(15)\n",
+      "memory usage: 1.6+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "# Se revisa la información del tipo de datos del DataFrame, para poder determinar que se debe hacer con cada columna.\n",
     "# Por ejemplo, si una columna es de tipo object, se puede convertir a tipo datetime si contiene fechas.\n",
     "# Si una columna es de tipo int o float, se puede usar para cálculos numéricos.\n",
     "# Si una columna es de tipo category, se puede usar para agrupar datos.     \n",
     "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "322438f5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# usamos df.head() para ver las primeras filas del DataFrame y poder analizar los datos para su posterior limpieza y análisis.\n",
-    "# Esto nos permite ver los nombres de las columnas, los tipos de datos y los primeros registros \n",
-    "df.head()  "
    ]
   }
  ],
