Se agrega la consulta del segmento de ventas y el margen de ganancias

--- a/SuperStoreDS.ipynb
+++ b/SuperStoreDS.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f4a228ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Nasht\\Proyectos Python\\Ejercicio 3\\Trabajo3\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# Instalar paquetes necesarios:\n",
     "# !pip install pandas\n",
@@ -22,7 +31,7 @@
     "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import plotly_express as px\n",
+    "# import plotly_express as px \n",
     "import datetime\n",
     "import warnings\n",
     "# Se importa la librería de KaggleHub para descargar datasets para la práctica\n",
@@ -32,10 +41,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7727a85a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading from https://www.kaggle.com/api/v1/datasets/download/vivek468/superstore-dataset-final?dataset_version_number=1...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 550k/550k [00:00<00:00, 2.89MB/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting files...\n"
+     ]
+    }
+   ],
    "source": [
     "# Se establecio el path de la carpeta donde se descargan los datasets de KaggleHub la ultima version\n",
     "path = kagglehub.dataset_download(\"vivek468/superstore-dataset-final\")\n",
@@ -46,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e979bc0c",
    "metadata": {},
    "outputs": [],
@@ -57,18 +88,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "df014878",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Cargar el dataset a la variable df que sera nuestro DataFrame.\n",
-    "df=pd.read_csv(archivo,encoding='ISO-8859-1')"
+    "df=pd.read_csv(archivo,encoding='latin1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "77066058",
    "metadata": {},
    "outputs": [
@@ -113,6 +144,76 @@
     "# Si una columna es de tipo int o float, se puede usar para cálculos numéricos.\n",
     "# Si una columna es de tipo category, se puede usar para agrupar datos.     \n",
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "31da0a5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convertimos la fecha de pedido a formato datetime\n",
+    "df[\"Order Date\"] = pd.to_datetime(df[\"Order Date\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "83eb9c59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Año más reciente en el dataset\n",
+    "anio_max = df[\"Order Date\"].dt.year.max()\n",
+    "\n",
+    "# Filtramos desde ese año menos 4\n",
+    "df_5y = df[df[\"Order Date\"].dt.year >= anio_max - 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "73f646f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Segment         Sales       Profit  Profit_Margin (%)\n",
+      "0     Consumer  1.161401e+06  134119.2092          11.548050\n",
+      "1    Corporate  7.061464e+05   91979.1340          13.025506\n",
+      "2  Home Office  4.296531e+05   60298.6785          14.034269\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Agrupamos por segmento de cliente\n",
+    "segmento_agg = (\n",
+    "    df_5y.groupby(\"Segment\")[[\"Sales\", \"Profit\"]]\n",
+    "    .sum()\n",
+    "    .reset_index()\n",
+    ")\n",
+    "\n",
+    "# Calculamos el margen de beneficio\n",
+    "segmento_agg[\"Profit_Margin (%)\"] = (\n",
+    "    segmento_agg[\"Profit\"] / segmento_agg[\"Sales\"]\n",
+    ") * 1\n",
+    "\n",
+    "\n",
+    "segmento_agg = (\n",
+    "    df_5y.groupby(\"Segment\")[[\"Sales\", \"Profit\"]]\n",
+    "    .sum()\n",
+    "    .reset_index()\n",
+    ")\n",
+    "\n",
+    "# Calculamos el margen de beneficio\n",
+    "segmento_agg[\"Profit_Margin (%)\"] = (\n",
+    "    segmento_agg[\"Profit\"] / segmento_agg[\"Sales\"]\n",
+    ") * 100\n",
+    "\n",
+    "print(segmento_agg.sort_values(\"Sales\", ascending=False))"
    ]
   }
  ],
