Se agrega la evoluvion de las ventas por año

--- a/SuperStoreDS.ipynb
+++ b/SuperStoreDS.ipynb
@@ -234,6 +234,31 @@
     "plt.xlabel(\"Segmento\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c4159c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Queremos saber la evolución de las ventas por años, por lo que creamos una nueva columna con el año\n",
+    "df_5y[\"Año\"] = df_5y[\"Order Date\"].dt.year\n",
+    "\n",
+    "# Agrupamos por año\n",
+    "ventas_anuales = (\n",
+    "    df_5y.groupby(\"Año\")[[\"Sales\", \"Profit\"]]\n",
+    "    .sum()\n",
+    "    .reset_index()\n",
+    ")\n",
+    "\n",
+    "# Calculamos el margen de beneficio por año\n",
+    "ventas_anuales[\"Profit_Margin (%)\"] = (\n",
+    "    ventas_anuales[\"Profit\"] / ventas_anuales[\"Sales\"]\n",
+    ") * 100\n",
+    "\n",
+    "print(ventas_anuales.sort_values(\"Año\"))\n"
+   ]
   }
  ],
  "metadata": {
