Actualizacion con el grafico de la evlucion de las ventas por año

--- a/SuperStoreDS.ipynb
+++ b/SuperStoreDS.ipynb
@@ -237,10 +237,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "4c4159c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Año        Sales      Profit  Profit_Margin (%)\n",
+      "0  2014  484247.4981  49543.9741          10.231126\n",
+      "1  2015  470532.5090  61618.6037          13.095504\n",
+      "2  2016  609205.5980  81795.1743          13.426530\n",
+      "3  2017  733215.2552  93439.2696          12.743771\n"
+     ]
+    }
+   ],
    "source": [
     "# Queremos saber la evolución de las ventas por años, por lo que creamos una nueva columna con el año\n",
     "df_5y[\"Año\"] = df_5y[\"Order Date\"].dt.year\n",
