--- a/SuperStoreDS.ipynb
+++ b/SuperStoreDS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "f4a228ad",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "7727a85a",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "e979bc0c",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "77066058",
    "metadata": {},
    "outputs": [
@@ -79,30 +79,30 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 9994 entries, 0 to 9993\n",
       "Data columns (total 21 columns):\n",
-      " #   Column         Non-Null Count  Dtype  \n",
-      "---  ------         --------------  -----  \n",
-      " 0   Row ID         9994 non-null   int64  \n",
-      " 1   Order ID       9994 non-null   object \n",
-      " 2   Order Date     9994 non-null   object \n",
-      " 3   Ship Date      9994 non-null   object \n",
-      " 4   Ship Mode      9994 non-null   object \n",
-      " 5   Customer ID    9994 non-null   object \n",
-      " 6   Customer Name  9994 non-null   object \n",
-      " 7   Segment        9994 non-null   object \n",
-      " 8   Country        9994 non-null   object \n",
-      " 9   City           9994 non-null   object \n",
-      " 10  State          9994 non-null   object \n",
-      " 11  Postal Code    9994 non-null   int64  \n",
-      " 12  Region         9994 non-null   object \n",
-      " 13  Product ID     9994 non-null   object \n",
-      " 14  Category       9994 non-null   object \n",
-      " 15  Sub-Category   9994 non-null   object \n",
-      " 16  Product Name   9994 non-null   object \n",
-      " 17  Sales          9994 non-null   float64\n",
-      " 18  Quantity       9994 non-null   int64  \n",
-      " 19  Discount       9994 non-null   float64\n",
-      " 20  Profit         9994 non-null   float64\n",
-      "dtypes: float64(3), int64(3), object(15)\n",
+      " #   Column         Non-Null Count  Dtype         \n",
+      "---  ------         --------------  -----         \n",
+      " 0   Row ID         9994 non-null   int64         \n",
+      " 1   Order ID       9994 non-null   object        \n",
+      " 2   Order Date     9994 non-null   datetime64[ns]\n",
+      " 3   Ship Date      9994 non-null   object        \n",
+      " 4   Ship Mode      9994 non-null   object        \n",
+      " 5   Customer ID    9994 non-null   object        \n",
+      " 6   Customer Name  9994 non-null   object        \n",
+      " 7   Segment        9994 non-null   object        \n",
+      " 8   Country        9994 non-null   object        \n",
+      " 9   City           9994 non-null   object        \n",
+      " 10  State          9994 non-null   object        \n",
+      " 11  Postal Code    9994 non-null   int64         \n",
+      " 12  Region         9994 non-null   object        \n",
+      " 13  Product ID     9994 non-null   object        \n",
+      " 14  Category       9994 non-null   object        \n",
+      " 15  Sub-Category   9994 non-null   object        \n",
+      " 16  Product Name   9994 non-null   object        \n",
+      " 17  Sales          9994 non-null   float64       \n",
+      " 18  Quantity       9994 non-null   int64         \n",
+      " 19  Discount       9994 non-null   float64       \n",
+      " 20  Profit         9994 non-null   float64       \n",
+      "dtypes: datetime64[ns](1), float64(3), int64(3), object(14)\n",
       "memory usage: 1.6+ MB\n"
      ]
     }
@@ -117,7 +117,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
+   "id": "d85b8a86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Se analiza la estructura del DataFrame, para determinar que columnas se pueden eliminar.\n",
+    "# En este caso, se eliminarán las columnas que no aportan información relevante para el análisis\n",
+    "df = df.drop ('Row ID', axis = 1)\n",
+    "df = df.drop ('Customer ID', axis = 1)\n",
+    "df = df.drop ('Postal Code', axis = 1)\n",
+    "df = df.drop ('Product ID', axis = 1)\n",
+    "df = df.drop ('Quantity', axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "31da0a5e",
    "metadata": {},
    "outputs": [],
@@ -128,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "id": "83eb9c59",
    "metadata": {},
    "outputs": [],
@@ -142,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "id": "73f646f6",
    "metadata": {},
    "outputs": [
@@ -187,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "id": "337c7d85",
    "metadata": {},
    "outputs": [
@@ -212,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "id": "a99a1894",
    "metadata": {},
    "outputs": [
@@ -237,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "id": "4c4159c9",
    "metadata": {},
    "outputs": [
@@ -274,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "id": "e50566c6",
    "metadata": {},
    "outputs": [
