se  agrego el margen de beneficio por año

--- a/SuperStoreDS.ipynb
+++ b/SuperStoreDS.ipynb
@@ -312,11 +312,25 @@
     "plt.xlabel(\"Año\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1119dcb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.barplot(data=ventas_anuales, x=\"Año\", y=\"Profit_Margin (%)\", palette=\"Purples_d\")\n",
+    "plt.title(\"Margen de Beneficio (%) por Año\")\n",
+    "plt.ylabel(\"Margen (%)\")\n",
+    "plt.xlabel(\"Año\")\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
